--- a/writing/env-var-review.bib
+++ b/writing/env-var-review.bib
@@ -3560,3 +3560,94 @@
 	year = {2019},
 	pages = {585--597},
 }
+
+@article{douglas_relative_2014,
+	title = {Relative importance of prey abundance and habitat structure as drivers of shorebird breeding success and abundance: {Drivers} of shorebird breeding success and abundance},
+	volume = {17},
+	issn = {13679430},
+	shorttitle = {Relative importance of prey abundance and habitat structure as drivers of shorebird breeding success and abundance},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/acv.12119},
+	doi = {10.1111/acv.12119},
+	language = {en},
+	number = {6},
+	urldate = {2022-11-08},
+	journal = {Animal Conservation},
+	author = {Douglas, David J. T. and Pearce-Higgins, James W.},
+	month = dec,
+	year = {2014},
+	pages = {535--543},
+}
+
+@article{simcharoen_female_2014,
+	title = {Female tiger \textit{{Panthera} tigris} home range size and prey abundance: important metrics for management},
+	volume = {48},
+	issn = {0030-6053, 1365-3008},
+	shorttitle = {Female tiger \textit{{Panthera} tigris} home range size and prey abundance},
+	url = {https://www.cambridge.org/core/product/identifier/S0030605312001408/type/journal_article},
+	doi = {10.1017/S0030605312001408},
+	abstract = {Abstract
+            
+              Tigers
+              Panthera tigris
+              are highly threatened and continue to decline across their entire range. Actions to restore and conserve populations need to be based on science but, in South-east Asia, information on ecology and behaviour of tigers is lacking. This study reports the relationship between the home range size of female tigers and prey abundance, using data from radio-collared tigers in Huai Kha Khaeng Wildlife Sanctuary, Thailand, and published data from other studies. A total of 11 tigers, four males and seven females, were fitted with global positioning system collars, to estimate home ranges using 95 and 100\% minimum convex polygons (MCP). Prey abundance was estimated by faecal accumulation rates. The mean home range size of male tigers was 267 and 294 km
+              2
+              based on 95 and 100\% MCPs, respectively; the mean female home range size was 70 and 84 km
+              2
+              , respectively. Territories of male and female tigers had little overlap, which indicated both sexes were territorial. Mean densities of the prey species sambar
+              Rusa unicolor
+              , barking deer
+              Muntiacus muntjac
+              and large bovids were 7.5, 3.5 and 3.0 km
+              −2
+              , respectively. When female home range size and prey abundance were compared at six locations in Thailand, and at other sites in India, Nepal, Bangladesh and Russia, a significant negative correlation was found between prey abundance and home range size. Monitoring this relationship can provide managers with metrics for setting conservation goals.},
+	language = {en},
+	number = {3},
+	urldate = {2022-11-08},
+	journal = {Oryx},
+	author = {Simcharoen, Achara and Savini, Tommaso and Gale, George A. and Simcharoen, Saksit and Duangchantrasiri, Somphot and Pakpien, Somporn and Smith, James L.D.},
+	month = jul,
+	year = {2014},
+	pages = {370--377},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\G4WIWWTU\\Simcharoen et al. - 2014 - Female tiger Panthera tigris home range siz.pdf:application/pdf},
+}
+
+@article{watson_ferruginous_2020,
+	title = {Ferruginous {Hawk} ({Buteo} regalis) {Home} {Range} and {Resource} {Use} on {Northern} {Grasslands} in {Canada}},
+	url = {http://rgdoi.net/10.13140/RG.2.2.32404.32648},
+	doi = {10.13140/RG.2.2.32404.32648},
+	language = {en},
+	urldate = {2022-11-08},
+	author = {Watson, Jesse},
+	year = {2020},
+	note = {Publisher: Unpublished},
+}
+
+@article{yu_artificial_2022,
+	title = {Artificial shelters provide suitable thermal habitat for a cold-blooded animal},
+	volume = {12},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/s41598-022-09950-y},
+	doi = {10.1038/s41598-022-09950-y},
+	abstract = {Abstract
+            
+              Human activities such as urbanization often has negative affects wildlife. However, urbanization can also be beneficial to some animals by providing suitable microhabitats. To test the impact of urbanization on cold-blooded animals, we first conducted a snake survey at a national nature reserve (Xianghai natural reserve) and an adjacent tourist bird park (Red-crowned Crane Park). We show high presence of
+              Elaphe dione
+              in the tourist park even with high human activities and predator population (the endangered, red-crowned crane,
+              Grus japonensis
+              ). We then radio-tracked 20 individuals of
+              E. dione
+              , set seven camera traps, and recorded the temperature of the snakes and artificial structures in Crane Park to document their space use, activity, and thermal preference, respectively. Our results show
+              E. dione
+              preferred to use artificial facilities to shelter from their predators and for thermoregulation. The high number of rats from the camera traps indicate abundant prey items. Overall,
+              E. dione
+              appears to be adapted to modified habitats and may expand population size at the current study site.},
+	language = {en},
+	number = {1},
+	urldate = {2022-11-08},
+	journal = {Scientific Reports},
+	author = {Yu, Xin and Wu, Nicholas. C. and Ge, Luyuan and Li, Lianshan and Zhang, Zhengwang and Lei, Juan},
+	month = dec,
+	year = {2022},
+	pages = {5879},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\JTT7GGLT\\Yu et al. - 2022 - Artificial shelters provide suitable thermal habit.pdf:application/pdf},
+}
