--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -124,9 +124,9 @@ habitat productivity hypothesis: Harestad and Bunnel, 1979 [@harestad_home_1979]
 
 <!-- You need a lot more depth here. Open with a paragraph on movement generally that leads to the idea that responses to resource are something worth focusing on. Follow that up with a paragraph on the history of exploring movement/space use and resources, leading to the concept that, to date, the relationship between abundance and stochasticity have not been fully explored. Then finish with a paragraph detailing the aims of the current paper. -->
 
-\noindent The amount of resources an organism is able to access is a strong determinant of its probability to survive and reproduce. Resource limitations can cause individuals to experience a negative energetic balance, which can then result in lower fitness [@hou_cold_2020; @le_bot_fishery_2019], changes to community structure [@haney_tipping_2018; @burson_competition_2018; @riotte-lambert_environmental_2020; @ghislandi_resource_2018], altered physiology [@dai_pra_ground_2022; @rocha_life_2021; @le_bot_fishery_2019; @wessling_seasonal_2018], lower chance of reproduction [@stefanescu_timing_2021; @schmidt_interplay_2020; @le_bot_fishery_2019], or even death [@foley_severe_2008; @berger_climate_2018]. Thus, many organisms will change their behaviors in response to changes in local resource abundance. Some species may respond to fluctuations in resource abundance by, if possible, switching to other food sources [@steinmetz_effects_2021; @le_bot_fishery_2019], reducing energetic costs by reducing body heat [@schmidt_interplay_2020] or entering hibernation or torpor [@fjelldal_nightly_2021; @mohr_cellular_2020; @boyles_optimal_2020], but movement represents one of the most readily available traits that species can adjust, whether this be by modifying their home range [@bista_effect_2022; @lucherini_habitat_1996; @relyea_home_2000], migrating [@middleton_green-wave_2018; @geremia_migrating_2019], dispersing [@refs], or moving nomadically [@teitelbaum_beyond_2019; @nandintsetseg_variability_2019].
+\noindent The amount of resources an organism is able to access is a strong determinant of its probability to survive and reproduce. Resource limitations can cause individuals to experience a negative energetic balance, which can then result in lower fitness [@hou_cold_2020; @le_bot_fishery_2019], changes to community structure [@haney_tipping_2018; @burson_competition_2018; @riotte-lambert_environmental_2020; @ghislandi_resource_2018], altered physiology [@dai_pra_ground_2022; @rocha_life_2021; @le_bot_fishery_2019; @wessling_seasonal_2018], lower chance of reproduction [@stefanescu_timing_2021; @schmidt_interplay_2020; @le_bot_fishery_2019; @douglas_relative_2014], or even death [@foley_severe_2008; @berger_climate_2018]. Thus, many organisms will change their behaviors in response to changes in local resource abundance. Some species may respond to fluctuations in resource abundance by, if possible, switching to other food sources [@steinmetz_effects_2021; @le_bot_fishery_2019], reducing energetic costs by reducing body heat [@schmidt_interplay_2020] or entering hibernation or torpor [@fjelldal_nightly_2021; @mohr_cellular_2020; @boyles_optimal_2020], but movement represents one of the most readily available traits that species can adjust, whether this be by modifying their home range [@bista_effect_2022; @lucherini_habitat_1996; @relyea_home_2000; @yu_artificial_2022; @arechavala-lopez_common_2019], migrating [@middleton_green-wave_2018; @geremia_migrating_2019], dispersing [@refs], or moving nomadically [@teitelbaum_beyond_2019; @nandintsetseg_variability_2019].
 
-While there are many other causes of animal movement, the relationship between animal movement and resource abundance has been of interest to biologists for over half a century. @burt_territoriality_1943 considered the search for food as the primary driver for animal movement within an animal's home range. Three decades after, @southwood_habitat_1977 suggested change in resource abundance is a strong determinant of how animals decide when and where to live and reproduce. Two years later, @harestad_home_1979 proposed that the simplest hypothesis for the relationship between an animal's home range size is inversely proportional to resource abundance. More recently, various researches reported that home range size decreases linearly with resource abundance [desert mule deer: @relyea_home_2000; red panda: @bista_effect_2022]. Others demonstrated that spatial needs decrease nonlinearly as habitat productivity increases, with stronger decreases when resources are scarce [e.g., @herfindal_prey_2005; @nilsen_can_2005]. Additionally, an animal's spatial requirements depend strongly on its metabolic rate and diet, as demonstrated over three decades ago by various scientists, including @lindstedt_home_1986 and @reiss_scaling_1988. Thus, there are many drivers of animal movement and many causes of variety between behaviors, and we currently lack a unifying framework for quantifying the effects of resource abundance and unpredictability on animals' spatial needs.
+While there are many other causes of animal movement, the relationship between animal movement and resource abundance has been of interest to biologists for over half a century. @burt_territoriality_1943 considered the search for food as the primary driver for animal movement within an animal's home range. Three decades after, @southwood_habitat_1977 suggested change in resource abundance is a strong determinant of how animals decide when and where to live and reproduce. Two years later, @harestad_home_1979 proposed that the simplest hypothesis for the relationship between an animal's home range size is inversely proportional to resource abundance. More recently, various researches reported that home range size decreases linearly with resource abundance [desert mule deer: @relyea_home_2000; red panda: @bista_effect_2022]. Others demonstrated that spatial needs decrease nonlinearly as habitat productivity increases, with stronger decreases when resources are scarce [e.g., Canadian lynx: @herfindal_prey_2005; carnivores: @nilsen_can_2005; tigers: @simcharoen_female_2014; ferruginous hawks: @watson_ferruginous_2020]. Additionally, an animal's spatial requirements depend strongly on its metabolic rate and diet, as demonstrated over three decades ago by various scientists, including @lindstedt_home_1986 and @reiss_scaling_1988. Thus, there are many drivers of animal movement and many causes of variety between behaviors, and we currently lack a unifying framework for quantifying the effects of resource abundance and unpredictability on animals' spatial needs.
 
 In this study, we illustrate how animals' spatial needs depend on the abundance and unpredictability of resources. First, we set the theoretical background necessary for the successive chapters. Concepts and notation are introduced without assuming any previous knowledge of statistical notation or movement ecology. Next, we provide a review of the effects of resource abundance on animals spatial needs while suggesting a unifying hypothesis of how animals respond to changes in resource abundance. Afterwards, we present a hypothesis for how animals respond to resource unpredictability. Subsequently, we test the two hypotheses using quantitative simulated animal responses to changes in resource abundance and unpredictability. Finally, we demonstrate how this framework can be used in practice to describe the movement ecology of a lowland tapir living in the Brazilian Cerrado. Results from the simulations and empirical example are presented using a fully transparent approach that allows researchers to replicate the work and apply the methods to their own tracking data.
 
@@ -206,7 +206,11 @@ Depending on sampling frequency, statistical methods that rely on straight-line 
 
 @mitsuhashi_home_2018: urban raccoon dogs (*Nyctereutes procyonoides*) have a smaller HR than rural ones
 
-@cronk_home_2021: yellow mongoose (*Cynictis penicillata*) in urban regions have smaller HRs 
+@cronk_home_2021: yellow mongoose (*Cynictis penicillata*) in urban regions have smaller HRs
+
+@yu_artificial_2022: rat snakes move to artificial structures for better prey availability and better thermoregulation
+
+Although it is generally acknowledged that animals will modify their behavior in response to human activity [@rogala_human_2011] as well as changing conditions [@walther_ecological_2002; @chevin_adaptation_2010; @sih_evolution_2011], a fine-scale understanding of behavioral responses is lacking [@sih_evolution_2011; @beever_behavioral_2017].
 
 @teitelbaum_beyond_2019:
 
@@ -302,7 +306,7 @@ Simulation refs: @blackwell_heterogeneity_2007, @quaglietta_simulating_2019, @tu
 
 ## Moving window examples
 
-```{r moving-window-examples, fig.cap="Seven-day home range size of a tapir ($Tapirus~terrestris$) in response to changes in mean and variance in resource abundance. (a.) GPS tracking data of the tapir. (b.) Mean resource abundance esimated as the mean NDVI at the locations visited by the tapir. (c.) Varince in resource abundance esimated as the average variance in NDVI at the locations visited by the tapir. (d.) Estimated home range size during each seven-day period, based on 50\\% (bold) and 95\\% (thin) utilization quantiles. (e.) Effect of resource abundance on home range size. (f.) Effect of resource unpredictability on home range size. The effects in panels e and f were estimated using generalized linear models with Gamma cinditional distributions. The tapir movement data corresponds to the individual named \"Anna\" from the Cerrado sample of Medici $et~al.$ (2022).", out.width='100%'}
+```{r moving-window-examples, fig.cap="Seven-day home range size of a tapir ($Tapirus~terrestris$) in response to changes in mean and variance in resource abundance. (a.) GPS tracking data of the tapir. (b.) Mean resource abundance esimated as the mean NDVI at the locations visited by the tapir. (c.) Varince in resource abundance esimated as the average variance in NDVI at the locations visited by the tapir. (d.) Estimated home range size during each seven-day period, based on 50\\% (bold) and 95\\% (thin) utilization quantiles. (e.) Effect of resource abundance on home range size. (f.) Effect of resource unpredictability on home range size. The effects in panels e and f were estimated using generalized linear models with Gamma conditional distributions. The tapir movement data corresponds to the individual named \"Anna\" from the Cerrado sample of Medici $et~al.$ (2022).", out.width='100%'}
 knitr::include_graphics('../figures/tapir-example.png')
 ```
 
