cleaned some refs

--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -178,7 +178,7 @@ where $\nu$ indicates the NDVI value. Note that only **linear transformations** 
 \vec u_{t+1} = F(\Omega, \Phi, \vec r_t, \vec w_t, \vec u_t),
 \end{equation}
 
-such that an animal's position as time $t+1$ depends on its motion capacity ($\Omega$), navigation capacity ($\Phi$), internal state ($\vec w_t$) and current location ($\vec u_t$), as well as how each of the parameters may change with the current environmental factors ($\vec r_t$). This model is conceptually useful, as it can form the basis for many models, experiments, and hypotheses, but fitting such a model would be very difficult in practice (if not impossible). The parameters $\Omega, \Phi, \vec r_t, \text{and }\vec w_t$ cannot be quantified directly, and although it may be possible to monitor proxies for the parameters (e.g., body size, memory, cortisol levels, @refs), doing so with sufficient frequency and accuracy would not be simple. However, we can focus on animals' behavior and spatial needs as a response to resource abundance and unpredictability alone (rather than measuring changes in each of an animal's resources, needs, and behavioral states directly) <!-- since accounting for a proxy of resource abundance will also account for the effects of many other drivers that depend strongly on resource abundance (e.g., competition, predation)-->.
+such that an animal's position as time $t+1$ depends on its motion capacity ($\Omega$), navigation capacity ($\Phi$), internal state ($\vec w_t$) and current location ($\vec u_t$), as well as how each of the parameters may change with the current environmental factors ($\vec r_t$). This model is conceptually useful, as it can form the basis for many models, experiments, and hypotheses, but fitting such a model would be very difficult in practice (if not impossible). The parameters $\Omega, \Phi, \vec r_t, \text{and }\vec w_t$ cannot be quantified directly, and although it may be possible to monitor proxies for the parameters (e.g., body size, memory, cortisol levels), doing so with sufficient frequency and accuracy would not be simple. However, we can focus on animals' behavior and spatial needs as a response to resource abundance and unpredictability alone (rather than measuring changes in each of an animal's resources, needs, and behavioral states directly) <!-- since accounting for a proxy of resource abundance will also account for the effects of many other drivers that depend strongly on resource abundance (e.g., competition, predation)-->.
 
 ### Visualizing movement as a stochastic process
 
@@ -188,7 +188,7 @@ If sampling frequency is too low to provide precise measures of autocorrelation,
 
 ### Quantifying spatial needs
 
-The concept of a home range has a long history in ecological research as an indicator of the space an animal requires to satisfy its essential requirements during a period of time [@burt_territoriality_1943], but home range analysis is not appropriate for animals which are not range-resident, such as migrating animals [e.g., @jonzen_rapid_2006; @geremia_migrating_2019; @abrahms_memory_2019] and nomadic animals [e.g., @morato_space_2016; @nandintsetseg_variability_2019]. Although here we quantify animal's spatial needs using 50% and 95% home range estimates, we expect that similar conclusions can be drawn about the variance in position of animals that are not range-resident [@refs].
+The concept of a home range has a long history in ecological research as an indicator of the space an animal requires to satisfy its essential requirements during a period of time [@burt_territoriality_1943], but home range analysis is not appropriate for animals which are not range-resident, such as migrating animals [e.g., @jonzen_rapid_2006; @geremia_migrating_2019; @abrahms_memory_2019] and nomadic animals [e.g., @morato_space_2016; @nandintsetseg_variability_2019]. Although here we quantify animal's spatial needs using 50% and 95% home range estimates, we expect that similar conclusions can be drawn about the positional variance of animals that are not range-resident.
 
 Although range-resident animals will generally have smaller $\vpos$ than migratory and nomadic animals, $\vpos$ is not sufficient to distinguish between range residency, migration, and nomadism, since $\vpos$ determines the scale and size of an animal's spatial needs but not its behavior. Instead, the animal's $\tau_p$, $\tau_v$, and $\bar v$ can help discriminate between different kinds of movement. Animals with a $\tau_p$ shorter than a year are likely range-resident, while animals with a $\tau_p$ on the order of a year are likely to be migratory (as long as their life expectancy is greater than a year). In contrast, when an animal's $\tau_p$ is on the order of its expected lifespan, it is most often nomadic, since it is unlikely to return to locations it visited in the past.
 
@@ -229,7 +229,7 @@ knitr::include_graphics('../figures/mean-abundance-hr-hypotheses.png')
 
 * add refs to generalize beyond terrestrial mammals
 
-\noindent While animals' needs vary greatly between taxonomic groups, some needs are essential for most species for survival and reproduction. All heterotrophic organisms require sources of chemical energy (i.e., food), water, and various limiting nutrients to survive, grow, and reproduce [@baldwin_nutritional_1984; @ref]. Failing to acquire sufficient resources is likely to result in lower fitness, changes in physiology or behavior, physiological damage, inability to reproduce, and death. Motile organisms can move to new locations in search of resources, but they must also account for a higher metabolism [@ref] and movement costs [@ref]. The size of an animal's spatial needs is often hypothesized to be depend on resource abundance [@burt_territoriality_1943], such that spatial needs increase when resources are low, but the relationship is likely not monotonic nor linear [e.g., @nilsen_can_2005; @ex; see figure \@ref(fig:mu-hyp)]. Low values of $\e(R)$ force animals to have larger home ranges [@relyea_home_2000; @nilsen_can_2005; @herfindal_prey_2005; @bista_effect_2022], migrate to better locations [@samarra_movements_2017; @middleton_green-wave_2018; @geremia_migrating_2019], or move nomadically [@teitelbaum_beyond_2019; @nandintsetseg_variability_2019], although large-scale changes in behavior (such as shifts to dispersal, migration, and nomadism) are more likely to occur over evolutionary timescales rather than an animal's lifespan \@ref(fig:mu-hyp). As $\e(R)$ increases, we expect animals' spatial requirements to decrease nonlinearly until they reach the smallest amount of space required to survive [see @relyea_home_2000; @bista_effect_2022, although the latter uses models which assumes the effect to be linear].
+\noindent While animals' needs vary greatly between taxonomic groups, some needs are essential for most species for survival and reproduction. All heterotrophic organisms require sources of chemical energy (i.e., food), water, and various limiting nutrients to survive, grow, and reproduce [@baldwin_nutritional_1984; @ref]. Failing to acquire sufficient resources is likely to result in lower fitness, changes in physiology or behavior, physiological damage, inability to reproduce, and death. Motile organisms can move to new locations in search of resources, but they must also account for a higher metabolism [@ref] and movement costs [@ref]. The size of an animal's spatial needs is often hypothesized to be depend on resource abundance [@burt_territoriality_1943], such that spatial needs increase when resources are low, but the relationship is likely not monotonic nor linear [see see figure \@ref(fig:mu-hyp) and @nilsen_can_2005; @ex]. Low values of $\e(R)$ force animals to have larger home ranges [@relyea_home_2000; @nilsen_can_2005; @herfindal_prey_2005; @bista_effect_2022], migrate to better locations [@samarra_movements_2017; @middleton_green-wave_2018; @geremia_migrating_2019], or move nomadically [@teitelbaum_beyond_2019; @nandintsetseg_variability_2019], although large-scale changes in behavior (such as shifts to dispersal, migration, and nomadism) are more likely to occur over evolutionary timescales rather than an animal's lifespan \@ref(fig:mu-hyp). As $\e(R)$ increases, we expect animals' spatial requirements to decrease nonlinearly until they reach the smallest amount of space required to survive [see @relyea_home_2000; @bista_effect_2022, although the latter uses models which assumes the effect to be linear].
 
 Animals living in large groups will often require larger home ranges because they will have to share resources with conspecifics [@prox_framework_2020], but larger home ranges can be harder to defend and also result in higher rates of competition and movement costs [@grant_whether_1993; @jetz_scaling_2004; but also see @dickie_resource_2022]. It is unclear when animals switch from range residency to migration or nomadism (or vice-versa), but understanding the connection between the types of movement is important for quantifying the effect of resource abundance on animal's spatial needs. From a quantitative perspective, the switch is related to an animal's home range crossing time (or positional autocorrelation, $\tau_p$). As the amount of space an animal uses over its lifespan, the amount of time required to cross the area ($\tau_p$) will also increase, so animals with $\tau_p$ on the order of their expected lifespan will necessarily be nomadic.
 
@@ -306,6 +306,13 @@ Simulation refs: @blackwell_heterogeneity_2007, @quaglietta_simulating_2019, @tu
 
 ## Moving window examples
 
+Animal's spatial needs are often estimated using all available tracking data. Doing so maximizes the (effective) sample size, but it also assumes that during the tracking period the animal's movement behavior did not change and that its home range did not shift either. Although these assumptions may be valid for relatively short tracking periods (and often necessary for reasonable estimates of spatial needs), few animals will behave consistently during the tracking period and use the same space every day. ***Most animals (if not all) use their space selectively.*** *add examples with humans moving to different regions?*
+
+In the case of animals whose spatial needs change over their lifetimes, one may define HR as a function of time with distinct HRs for each distinct period [e.g., salmon: @ref; bald eagles: @wheat_migrate_2017; @wheat_migrate_2017] or as a continuous function so the HR changes smoothly over time [e.g., elephants: @polansky_elucidating_2015; bison and mule deer: @geremia_migrating_2019; elk: @falcon-cortes_hierarchical_2021]. In either case, the accuracy of the estimated parameters will depend strongly on the length of the observation period as well as the measurement frequency [@noonan_comprehensive_2019]. Data from a portion of an animal's life may be sufficient if it is representative the animal's movement or if inference is limited to the period(s) for which data is available.
+
+The ability of a specialist or obligate symbiont to shift its home range or adapt will likely depend strongly on its associate's ability to move or adapt, too.
+
+
 ```{r moving-window-examples, fig.cap="Seven-day home range size of a tapir ($Tapirus~terrestris$) in response to changes in mean and variance in resource abundance. (a.) GPS tracking data of the tapir. (b.) Mean resource abundance esimated as the mean NDVI at the locations visited by the tapir. (c.) Varince in resource abundance esimated as the average variance in NDVI at the locations visited by the tapir. (d.) Estimated home range size during each seven-day period, based on 50\\% (bold) and 95\\% (thin) utilization quantiles. (e.) Effect of resource abundance on home range size. (f.) Effect of resource unpredictability on home range size. The effects in panels e and f were estimated using generalized linear models with Gamma conditional distributions. The tapir movement data corresponds to the individual named \"Anna\" from the Cerrado sample of Medici $et~al.$ (2022).", out.width='100%'}
 knitr::include_graphics('../figures/tapir-example.png')
 ```
@@ -318,6 +325,12 @@ knitr::include_graphics('../figures/tapir-example.png')
 * additionally, can test for common behaviors between members of the same population or species
 * ecologists often conclude that populations from different regions behave differently [@examples], but their differences in behavior may only be due to differences in $\e(R)$ or $\var(R)$
 * using the methods presented here, it is possible to test whether populations and individuals do behave differently while also quantifying the differences in behavior
+
+## The spatiotemporal scale of stochastic events: memory and adaptability
+
+The spatiotemporal scales over which an event occurs are a main determinant of whether an animal will be able to predict the event and how it will respond to it (or fail to do so). Events which occur at the scale of the organism (i.e. approximately one or more times per lifetime and within the animal's spatial range) are more likely to be perceived as a threat or boon worth preparing for [e.g., elephants: @foley_severe_2008; bison and mule deer: @geremia_migrating_2019]. Smaller organisms (e.g., mice) are more likely to be be severely impacted by a stochastic event than larger ones (e.g. elephants), since larger organisms can have bigger energy reserves [@lindstedt_seasonality_1985], can move longer distances over short periods of time [@hirt_general_2017], and tend to have longer lifespans, generation times, and developmental periods [@brown_toward_2004] that allow them to develop or memory about the frequency and severity of such events [@foley_severe_2008; @polansky_elucidating_2015]. However, the short generation time and high reproductive rate of smaller *r-selected* species [@pianka_r-_1970; @brown_toward_2004] can promote traits that increase survival following frequent extreme events [@examples]. Frequent events may result in changes in animal behavior and memory [framework: @riotte-lambert_environmental_2020; elephants: @foley_severe_2008; bison and mule deer: @geremia_migrating_2019; elk: @falcon-cortes_hierarchical_2021], while events that occur over larger spatiotemporal scales are more likely to promote slower changes through natural selection and evolution [@logares_black_2012; @examples].
+
+Adaptability and responsiveness to change are strong determinants to whether an animal survives in a changing environment [@riotte-lambert_environmental_2020]. An animal's ability to recognize cues and anticipate periods and areas of scarcity or abundance can have appreciable effects on the animal's chance of survival and reproduction. @rickbeil_plasticity_2019 showed that the yearly migration of elk (*Cervus canadensis*) depends on cues such as available forage biomass, hunting pressure, snow fall, and snow melt, while @falcon-cortes_hierarchical_2021 propose that elk move following nonrandom patterns based on memory that can last longer than 11 months. @jonzen_rapid_2006 demonstrated that large-scale, trans-Saharian migrant birds adapt their migration timing based on changes in the beginning of spring. However, relying strongly on short-term cues rather than depending on memory can also cause animals to become trapped in sub-optimal locations [@whales_getting_stuck] or fail to find crucial resources [@polansky_elucidating_2015; @foley_severe_2008]. @merkle_spatial_2019 suggest that Bison (*Bison bison*) rely memory much more than on tracking spring green-up or autumn snow depth.
 
 \newpage
 
@@ -337,20 +350,6 @@ Notes:
 # Conclusion
 
 \noindent The work presented here provides a unifying framework for viewing animal movement as a function of resource abundance. We provide realistic and flexible hypotheses of the effects of $\e(R)$ and $\var(R)$ on animals' spatial needs and movement behavior. We demonstrate that animals' spatial needs respond nonlinearly to both $\e(R)$ and $\var(R)$, and we demonstrate the importance of accounting for $\var(R)$ besides $\e(R)$. We also provide a framework for modeling animal behavior and movement continuously rather than imposing arbitrary thresholds between range-resident and nomadic animals. (notes on seasons and "seasonal behavior")
-
-\newpage
-
-# MISC
-
-In the case of animals whose spatial needs change over the their lifetimes [@refs], one may define HR as a function of time with distinct HRs for each period [e.g., salmon spawning: @ref] or as a continuous function of age [so the HR changes smoothly: @ref]. In either case, the accuracy of the estimated parameters will depend strongly on the length of the observation period as well as the measurement frequency [@noonan_comprehensive_2019]. Data from a portion of an animal's life may be sufficient if it is representative the animal's movement or if inference is limited to the period(s) for which data is available.
-
-The ability of a specialist or obligate symbiont to shift its home range or adapt will likely depend strongly on its associate's ability to move or adapt, too.
-
-## The spatiotemporal scale of stochastic events: memory and adaptability
-
-The spatiotemporal scales over which an event occurs are a main determinant of whether an animal will be able to predict the event and how it will respond to it (or fail to do so). Events which occur at the scale of the organism (i.e. approximately one or more times per lifetime and within the animal's spatial range) are more likely to be perceived as a threat or boon worth preparing for [e.g., @foley_severe_2008; @refs]. Smaller organisms (e.g., mice) are more likely to be be severely impacted by a stochastic event than larger ones (e.g. elephants), since larger organisms can have bigger energy reserves [@lindstedt_seasonality_1985], can move longer distances over short periods of time [@hirt_general_2017], and tend to have longer lifespans, generation times, and developmental periods [@brown_toward_2004] that allow them to develop or memory about the frequency and severity of such events [@foley_severe_2008; @polansky_elucidating_2015]. However, the short generation time and high reproductive rate of smaller *r-selected* species [@pianka_r-_1970; @brown_toward_2004] can promote traits that increase survival following frequent extreme events [@examples]. Frequent events may result in changes in animal behavior and memory [@foley_severe_2008; @geremia_migrating_2019; @examples], while events that occur over larger spatiotemporal scales are more likely to promote slower changes through natural selection and evolution [@logares_black_2012; @examples].
-
-Adaptability and responsiveness to change are strong determinants to whether an animal survives in a changing environment [@riotte-lambert_environmental_2020]. An animal's ability to recognize cues and anticipate periods and areas of scarcity or abundance can have appreciable effects on the animal's chance of survival and reproduction. @rickbeil_plasticity_2019 showed that the yearly migration of elk (*Cervus canadensis*) depends on cues such as available forage biomass, hunting pressure, snow fall, and snow melt, while @falcon-cortes_hierarchical_2021 propose that elk move following nonrandom patterns based on memory that can last longer than 11 months. @jonzen_rapid_2006 demonstrated that large-scale, trans-Saharian migrant birds adapt their migration timing based on changes in the beginning of spring. However, relying strongly on short-term cues rather than depending on memory can also cause animals to become trapped in sub-optimal locations [@whales_getting_stuck] or fail to find crucial resources [@polansky_elucidating_2015; @foley_severe_2008]. @merkle_spatial_2019 suggest that Bison (*Bison bison*) rely memory much more than on tracking spring green-up or autumn snow depth.
 
 \newpage
 
